log
Thu Mar 26 07:04:37 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
69a606d
Thu Mar 26 07:15:19 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:93:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   93 |     void* dato = aux->data;
      |           ^~~~
cc1: all warnings being treated as errors
9183163
Thu Mar 26 07:20:52 PM UTC 2026: 
 list.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  0|0
1b702c8
